# IcewinePredictionModel

./: .gitignore  AGENTS.md  Agent.md  Context.md  README.md  memory.md  pyproject.toml  start_web.ps1  start_web.sh  第一版模型解释.md
config/: display_names.yaml  external_aliases.yaml  leagues.yaml  oddspapi_backfill_batches.yaml  paper_automation.yaml  sources.yaml  sync.yaml  the_odds_api_unsupported_leagues.yaml
docs/: README.md  debug-database-handoff.md
scripts/: clear_paper_recommendation_records.sh  start_web_api.ps1  start_web_frontend.ps1  supplement_historical_odds_snapshots_from_raw.sh
src/: icewine_cli.py  icewine_web.py
tests/: conftest.py  test_alias_cli.py  test_alias_service.py  test_api_football_client.py  test_api_football_mapper.py  test_api_football_provider.py  test_ascii_cli_entry.py  test_ascii_cli入口.py  test_baseline_asian_handicap_model_service.py  test_baseline_away_cover_bucket_sandbox_service.py  test_baseline_away_cover_bucket_threshold_service.py  test_baseline_away_cover_stability_service.py  test_baseline_dynamic_feature_set_service.py  test_baseline_edge_backtest_service.py  test_baseline_execution_robustness_filter_service.py  test_baseline_execution_robustness_grid_service.py  test_baseline_execution_robustness_service.py  test_baseline_feature_set_service.py  test_baseline_home_cover_signal_research_service.py  test_baseline_market_diagnostics_service.py  test_baseline_match_winner_model_service.py  test_baseline_model_consensus_signal_research_service.py  test_baseline_paper_discovery_alignment_service.py  test_cli.py  (+109 more)
(+313 files in other folders)
