[project]
name = "icewine-prediction-model"
version = "0.1.0"
description = "足球亚盘和大小球预测推荐系统"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "rich>=13.8,<14",
  "pytest>=8.2",
  "requests>=2.31",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "scipy>=1.11",
  "scikit-learn>=1.7,<1.8",
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[project.scripts]
icewine = "icewine_cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
